@@ -1,6 +1,9 @@
 2008-04-10  Andy Wingo  <wingo@pobox.com>
 
-	* libguile/goops.c (get_slot_value, set_slot_value): In the struct
+	* goops.c (wrap_init): Initialize 'u' slots to 0, not some random
+	SCM value.
+
+	* goops.c (get_slot_value, set_slot_value): In the struct
 	allocation case, don't poke the slots array directly -- we should
 	go through struct-ref/struct-set! code so that we get the
 	permissions and allocation ('u' versus 'p') correct.
